--- a/School Project WebApplication.csproj
+++ b/School Project WebApplication.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Identity\Pages\Account\Manage\" />
+  </ItemGroup>
+
 
 
 </Project>
