--- a/School Project WebApplication.csproj
+++ b/School Project WebApplication.csproj
@@ -17,7 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Administration\" />
     <Folder Include="Areas\Identity\Pages\Account\Manage\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 
