More Comments in the pages

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,3 +11,4 @@
     "SchoolProjectDbContextConnection": "Server=tpisql01.avcol.school.nz;Database=MVCwebBenny;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
+//This will be connected to the school's database
