Creating razor pages for teachers information

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolProjectDbContextConnection": "Server=tpisql01.avcol.school.nz;Database=MVCwebBenny;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SchoolProjectDbContextConnection": "Server=tpisql01.avcol.school.nz;Database=MVCwebBenny;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "School_Project_WebApplicationContext": "Server=(localdb)\\mssqllocaldb;Database=School_Project_WebApplicationContext-61f44008-535d-4338-9d6d-938d16212dcf;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
-//This will be connected to the school's database
